--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 numpy
-pandas
 scikit-learn
-xgboost
-lightgbm
 matplotlib
 shap
 japanize_matplotlib
 openpyxl
+pandas==1.5.3
+scikit-learn==1.2.2
+xgboost==1.7.5
+lightgbm==3.3.2
+joblib
+matplotlib
